--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +59,544 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>diet: (Worldwide)</th>\n",
+       "      <th>gym: (Worldwide)</th>\n",
+       "      <th>finance: (Worldwide)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2004-01</td>\n",
+       "      <td>100</td>\n",
+       "      <td>31</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2004-02</td>\n",
+       "      <td>77</td>\n",
+       "      <td>27</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2004-03</td>\n",
+       "      <td>75</td>\n",
+       "      <td>25</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2004-04</td>\n",
+       "      <td>73</td>\n",
+       "      <td>24</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004-05</td>\n",
+       "      <td>75</td>\n",
+       "      <td>23</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2004-06</td>\n",
+       "      <td>67</td>\n",
+       "      <td>23</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2004-07</td>\n",
+       "      <td>65</td>\n",
+       "      <td>25</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2004-08</td>\n",
+       "      <td>59</td>\n",
+       "      <td>27</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2004-09</td>\n",
+       "      <td>57</td>\n",
+       "      <td>27</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2004-10</td>\n",
+       "      <td>53</td>\n",
+       "      <td>24</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2004-11</td>\n",
+       "      <td>52</td>\n",
+       "      <td>24</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2004-12</td>\n",
+       "      <td>43</td>\n",
+       "      <td>24</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2005-01</td>\n",
+       "      <td>65</td>\n",
+       "      <td>33</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2005-02</td>\n",
+       "      <td>58</td>\n",
+       "      <td>29</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2005-03</td>\n",
+       "      <td>57</td>\n",
+       "      <td>27</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2005-04</td>\n",
+       "      <td>57</td>\n",
+       "      <td>25</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2005-05</td>\n",
+       "      <td>61</td>\n",
+       "      <td>25</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2005-06</td>\n",
+       "      <td>53</td>\n",
+       "      <td>25</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2005-07</td>\n",
+       "      <td>54</td>\n",
+       "      <td>25</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2005-08</td>\n",
+       "      <td>52</td>\n",
+       "      <td>28</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2005-09</td>\n",
+       "      <td>48</td>\n",
+       "      <td>27</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2005-10</td>\n",
+       "      <td>48</td>\n",
+       "      <td>26</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2005-11</td>\n",
+       "      <td>45</td>\n",
+       "      <td>26</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2005-12</td>\n",
+       "      <td>39</td>\n",
+       "      <td>24</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2006-01</td>\n",
+       "      <td>64</td>\n",
+       "      <td>34</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2006-02</td>\n",
+       "      <td>52</td>\n",
+       "      <td>29</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2006-03</td>\n",
+       "      <td>52</td>\n",
+       "      <td>28</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2006-04</td>\n",
+       "      <td>51</td>\n",
+       "      <td>26</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2006-05</td>\n",
+       "      <td>50</td>\n",
+       "      <td>26</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2006-06</td>\n",
+       "      <td>52</td>\n",
+       "      <td>25</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>2016-06</td>\n",
+       "      <td>46</td>\n",
+       "      <td>48</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>2016-07</td>\n",
+       "      <td>46</td>\n",
+       "      <td>58</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>2016-08</td>\n",
+       "      <td>46</td>\n",
+       "      <td>54</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>2016-09</td>\n",
+       "      <td>43</td>\n",
+       "      <td>51</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>2016-10</td>\n",
+       "      <td>40</td>\n",
+       "      <td>45</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>2016-11</td>\n",
+       "      <td>39</td>\n",
+       "      <td>46</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>2016-12</td>\n",
+       "      <td>36</td>\n",
+       "      <td>45</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>56</td>\n",
+       "      <td>58</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>2017-02</td>\n",
+       "      <td>58</td>\n",
+       "      <td>51</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>2017-03</td>\n",
+       "      <td>53</td>\n",
+       "      <td>52</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>2017-04</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>2017-05</td>\n",
+       "      <td>49</td>\n",
+       "      <td>48</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>2017-06</td>\n",
+       "      <td>48</td>\n",
+       "      <td>50</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>2017-07</td>\n",
+       "      <td>51</td>\n",
+       "      <td>54</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>2017-08</td>\n",
+       "      <td>47</td>\n",
+       "      <td>52</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>2017-09</td>\n",
+       "      <td>45</td>\n",
+       "      <td>51</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>2017-10</td>\n",
+       "      <td>44</td>\n",
+       "      <td>49</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>2017-11</td>\n",
+       "      <td>43</td>\n",
+       "      <td>48</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>2017-12</td>\n",
+       "      <td>40</td>\n",
+       "      <td>47</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>2018-01</td>\n",
+       "      <td>59</td>\n",
+       "      <td>61</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>2018-02</td>\n",
+       "      <td>56</td>\n",
+       "      <td>52</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>2018-03</td>\n",
+       "      <td>56</td>\n",
+       "      <td>52</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>2018-04</td>\n",
+       "      <td>60</td>\n",
+       "      <td>51</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>2018-05</td>\n",
+       "      <td>58</td>\n",
+       "      <td>49</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>2018-06</td>\n",
+       "      <td>53</td>\n",
+       "      <td>51</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>2018-07</td>\n",
+       "      <td>55</td>\n",
+       "      <td>52</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>2018-08</td>\n",
+       "      <td>52</td>\n",
+       "      <td>53</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>2018-09</td>\n",
+       "      <td>48</td>\n",
+       "      <td>53</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>2018-10</td>\n",
+       "      <td>45</td>\n",
+       "      <td>47</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>2018-11</td>\n",
+       "      <td>45</td>\n",
+       "      <td>50</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>179 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Month  diet: (Worldwide)  gym: (Worldwide)  finance: (Worldwide)\n",
+       "0    2004-01                100                31                    47\n",
+       "1    2004-02                 77                27                    49\n",
+       "2    2004-03                 75                25                    47\n",
+       "3    2004-04                 73                24                    47\n",
+       "4    2004-05                 75                23                    44\n",
+       "5    2004-06                 67                23                    45\n",
+       "6    2004-07                 65                25                    46\n",
+       "7    2004-08                 59                27                    45\n",
+       "8    2004-09                 57                27                    46\n",
+       "9    2004-10                 53                24                    44\n",
+       "10   2004-11                 52                24                    45\n",
+       "11   2004-12                 43                24                    41\n",
+       "12   2005-01                 65                33                    44\n",
+       "13   2005-02                 58                29                    50\n",
+       "14   2005-03                 57                27                    46\n",
+       "15   2005-04                 57                25                    46\n",
+       "16   2005-05                 61                25                    44\n",
+       "17   2005-06                 53                25                    44\n",
+       "18   2005-07                 54                25                    45\n",
+       "19   2005-08                 52                28                    45\n",
+       "20   2005-09                 48                27                    46\n",
+       "21   2005-10                 48                26                    44\n",
+       "22   2005-11                 45                26                    42\n",
+       "23   2005-12                 39                24                    38\n",
+       "24   2006-01                 64                34                    45\n",
+       "25   2006-02                 52                29                    46\n",
+       "26   2006-03                 52                28                    49\n",
+       "27   2006-04                 51                26                    47\n",
+       "28   2006-05                 50                26                    47\n",
+       "29   2006-06                 52                25                    44\n",
+       "..       ...                ...               ...                   ...\n",
+       "149  2016-06                 46                48                    48\n",
+       "150  2016-07                 46                58                    42\n",
+       "151  2016-08                 46                54                    43\n",
+       "152  2016-09                 43                51                    45\n",
+       "153  2016-10                 40                45                    41\n",
+       "154  2016-11                 39                46                    43\n",
+       "155  2016-12                 36                45                    40\n",
+       "156  2017-01                 56                58                    44\n",
+       "157  2017-02                 58                51                    45\n",
+       "158  2017-03                 53                52                    46\n",
+       "159  2017-04                 49                49                    43\n",
+       "160  2017-05                 49                48                    46\n",
+       "161  2017-06                 48                50                    43\n",
+       "162  2017-07                 51                54                    45\n",
+       "163  2017-08                 47                52                    45\n",
+       "164  2017-09                 45                51                    47\n",
+       "165  2017-10                 44                49                    46\n",
+       "166  2017-11                 43                48                    48\n",
+       "167  2017-12                 40                47                    51\n",
+       "168  2018-01                 59                61                    56\n",
+       "169  2018-02                 56                52                    49\n",
+       "170  2018-03                 56                52                    50\n",
+       "171  2018-04                 60                51                    49\n",
+       "172  2018-05                 58                49                    48\n",
+       "173  2018-06                 53                51                    46\n",
+       "174  2018-07                 55                52                    47\n",
+       "175  2018-08                 52                53                    48\n",
+       "176  2018-09                 48                53                    46\n",
+       "177  2018-10                 45                47                    49\n",
+       "178  2018-11                 45                50                    43\n",
+       "\n",
+       "[179 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gtrends  =  pd.read_csv('google_trends.csv', skiprows=1)\n",
-    "gtrends.head()"
+    "gtrends"
    ]
   },
   {
