Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -911,8 +911,233 @@
        "      <th>2004-05-01</th>\n",
        "      <td>73.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-06-01</th>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-07-01</th>\n",
+       "      <td>67.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-08-01</th>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-09-01</th>\n",
+       "      <td>59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-10-01</th>\n",
+       "      <td>57.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-11-01</th>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004-12-01</th>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-01-01</th>\n",
+       "      <td>43.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-02-01</th>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-03-01</th>\n",
+       "      <td>58.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-04-01</th>\n",
+       "      <td>57.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-05-01</th>\n",
+       "      <td>57.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-06-01</th>\n",
+       "      <td>61.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-07-01</th>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-08-01</th>\n",
+       "      <td>54.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-09-01</th>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-10-01</th>\n",
+       "      <td>48.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-11-01</th>\n",
+       "      <td>48.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-12-01</th>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-01</th>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-02-01</th>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-03-01</th>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-04-01</th>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-05-01</th>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-06-01</th>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-06-01</th>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-01</th>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-01</th>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-01</th>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-01</th>\n",
+       "      <td>43.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-11-01</th>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-01</th>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-02-01</th>\n",
+       "      <td>56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-03-01</th>\n",
+       "      <td>58.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04-01</th>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05-01</th>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-01</th>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-01</th>\n",
+       "      <td>48.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-01</th>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-01</th>\n",
+       "      <td>47.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-10-01</th>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-11-01</th>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-12-01</th>\n",
+       "      <td>43.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-02-01</th>\n",
+       "      <td>59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-01</th>\n",
+       "      <td>56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-04-01</th>\n",
+       "      <td>56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-05-01</th>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-06-01</th>\n",
+       "      <td>58.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-07-01</th>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-08-01</th>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-09-01</th>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-01</th>\n",
+       "      <td>48.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-11-01</th>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>179 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -922,17 +1147,75 @@
        "2004-02-01  100.0\n",
        "2004-03-01   77.0\n",
        "2004-04-01   75.0\n",
-       "2004-05-01   73.0"
+       "2004-05-01   73.0\n",
+       "2004-06-01   75.0\n",
+       "2004-07-01   67.0\n",
+       "2004-08-01   65.0\n",
+       "2004-09-01   59.0\n",
+       "2004-10-01   57.0\n",
+       "2004-11-01   53.0\n",
+       "2004-12-01   52.0\n",
+       "2005-01-01   43.0\n",
+       "2005-02-01   65.0\n",
+       "2005-03-01   58.0\n",
+       "2005-04-01   57.0\n",
+       "2005-05-01   57.0\n",
+       "2005-06-01   61.0\n",
+       "2005-07-01   53.0\n",
+       "2005-08-01   54.0\n",
+       "2005-09-01   52.0\n",
+       "2005-10-01   48.0\n",
+       "2005-11-01   48.0\n",
+       "2005-12-01   45.0\n",
+       "2006-01-01   39.0\n",
+       "2006-02-01   64.0\n",
+       "2006-03-01   52.0\n",
+       "2006-04-01   52.0\n",
+       "2006-05-01   51.0\n",
+       "2006-06-01   50.0\n",
+       "...           ...\n",
+       "2016-06-01   50.0\n",
+       "2016-07-01   46.0\n",
+       "2016-08-01   46.0\n",
+       "2016-09-01   46.0\n",
+       "2016-10-01   43.0\n",
+       "2016-11-01   40.0\n",
+       "2016-12-01   39.0\n",
+       "2017-01-01   36.0\n",
+       "2017-02-01   56.0\n",
+       "2017-03-01   58.0\n",
+       "2017-04-01   53.0\n",
+       "2017-05-01   49.0\n",
+       "2017-06-01   49.0\n",
+       "2017-07-01   48.0\n",
+       "2017-08-01   51.0\n",
+       "2017-09-01   47.0\n",
+       "2017-10-01   45.0\n",
+       "2017-11-01   44.0\n",
+       "2017-12-01   43.0\n",
+       "2018-01-01   40.0\n",
+       "2018-02-01   59.0\n",
+       "2018-03-01   56.0\n",
+       "2018-04-01   56.0\n",
+       "2018-05-01   60.0\n",
+       "2018-06-01   58.0\n",
+       "2018-07-01   53.0\n",
+       "2018-08-01   55.0\n",
+       "2018-09-01   52.0\n",
+       "2018-10-01   48.0\n",
+       "2018-11-01   45.0\n",
+       "\n",
+       "[179 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "diet_shift_1 = diet.shift(periods=1)\n",
-    "diet_shift_1.head()"
+    "diet_shift_1"
    ]
   },
   {
